--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 							<p class="lead bottommargin" style="max-width: 800px;"><strong>Hi, I’m Xin Meng. I enjoy designing and making stuff.</strong> 
 								<br><br>I am currently enrolled in the Renaissance Engineering Program at Nanyang Technological University. I also am receiving a certificate in design from the Segal Design Institute at Northwestern University. As a mechanical engineer, I found my passion in mechatronics and I embrace the technical challenges involved. 
 								<br><br>In my free time, I play video games, Chinese flute, Chinese chess, badminton and table tennis.
-								<br><br><a href="images/resume.pdf" target="_blank" class="more-link">View my resume <i class="icon-angle-right"></i></a>
+								<br><br><a href="images/Resume.pdf" target="_blank" class="more-link">View my resume <i class="icon-angle-right"></i></a>
 							</p>
 						</div>
 					</div>
