--- a/index.html
+++ b/index.html
@@ -286,6 +286,14 @@
 													</div>
 												</div>
 											</div>
+											<div class="slide">
+												<div class="testi-content">
+													<img src="images/hobbies/reach.jpg" alt="REACH with CDAC">
+													<div class="testi-meta">
+														<span>I was the president and co-founder of REACH, a service-learning committee that strived to encourage students in REP to engage with society. I especially enjoyed working with CDAC@Jurong, and I was glad that I was given the opportunity to spend time with the children there.</span>
+													</div>
+												</div>
+											</div>
 										</div>
 									</div>
 								</div>
