--- a/mechatronics.html
+++ b/mechatronics.html
@@ -29,6 +29,7 @@
 	<!-- Document Title
 	============================================= -->
 	<title>Yao Xin Meng | Mechatronics Works</title>
+	<link rel="icon" href="https://yaoxinmeng.github.io/favicon.ico">
 
 </head>
 
@@ -113,11 +114,11 @@
 						<div class="card events-meta">
 							<div class="card-body">
 								<ul class="portfolio-meta nobottommargin">
-									<li><span><i class="icon-user"></i>Created by:</span> John Doe</li>
-									<li><span><i class="icon-calendar3"></i>Completed on:</span> 17th March 2014</li>
-									<li><span><i class="icon-lightbulb"></i>Skills:</span> HTML5 / PHP / CSS3</li>
-									<li><span><i class="icon-link"></i>Client:</span> <a href="#">Google</a></li>
-									<li><span><i class="icon-link"></i>Client:</span> <a href="#">Google</a></li>
+									<li><span><i class="icon-calendar"></i>Started on:</span> September 2018</li>
+									<li><span><i class="icon-calendar-check"></i>Completed on:</span> June 2019</li>
+									<li><span><i class="icon-lightbulb"></i>Skills:</span> C / MATLAB / EAGLE</li>
+									<li><span><i class="icon-user"></i>Client:</span> None</li>
+									<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com" target="_blank"> Demo Videos</a></li>
 								</ul>
 							</div>
 						</div>
