projects page layout

--- a/mechatronics.html
+++ b/mechatronics.html
@@ -28,7 +28,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Yao Xin Meng | Mechatronics Works</title>
+	<title>Yao Xin Meng | Mechatronics</title>
 	<link rel="icon" href="https://yaoxinmeng.github.io/favicon.ico">
 
 </head>
@@ -89,12 +89,13 @@
 		<!-- Content
 		============================================= -->
 		<section id="content">
-			<div class="content-wrap">
+			<div class="content-wrap nopadding">
 
 				<div class="container clearfix">
 
-					<!-- Portfolio Single Gallery
+					<!-- Portfolio Single Gallery - ME333
 					============================================= -->
+					<h2 class="t300">ME333 - Introduction to Mechatronics</h2>
 					<div class="col_full portfolio-single-image">
 						<div class="fslider" data-arrows="true" data-animation="slide">
 							<div class="flexslider">
@@ -114,9 +115,9 @@
 						<div class="card events-meta">
 							<div class="card-body">
 								<ul class="portfolio-meta nobottommargin">
-									<li><span><i class="icon-calendar"></i>Started on:</span> September 2018</li>
-									<li><span><i class="icon-calendar-check"></i>Completed on:</span> June 2019</li>
-									<li><span><i class="icon-lightbulb"></i>Skills:</span> C / MATLAB / EAGLE</li>
+									<li><span><i class="icon-calendar"></i>Started on:</span> January 2019</li>
+									<li><span><i class="icon-calendar-check"></i>Completed on:</span> March 2019</li>
+									<li><span><i class="icon-lightbulb"></i>Skills:</span> C | MATLAB</li>
 									<li><span><i class="icon-user"></i>Client:</span> None</li>
 									<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com" target="_blank"> Demo Videos</a></li>
 								</ul>
@@ -137,12 +138,74 @@
 						</div>
 
 						<div class="col_half nobottommargin">
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, labore deserunt ex cupiditate est blanditiis dignissimos nesciunt doloremque laboriosam ullam necessitatibus voluptatum tempora itaque quia porro voluptates quo excepturi veritatis!</p>
+							<p>The final project of MECH_ENG 333 was to create a robot arm that could follow a user-defined trajectory in MATLAB. The software for the microcontroller was built using C, and the user interface using MATLAB.
+							</p>
 						</div>
 
 						<div class="col_half col_last nobottommargin">
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, sed.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, soluta explicabo sunt aliquam officiis autem.</p>
+							<p>This project was the culmination of all the lessons learnt over the quarter – coding, peripherals, interrupts, UART, PID control and motors. It was challenging but, as a result, I learnt to troubleshoot effectively. Eventually, my robot arm worked as intended.
+							</p>
+						</div>
+						<!-- Portfolio Single - Description End -->
+
+					</div><!-- .portfolio-single-content end -->
+
+					<div class="clear"></div>
+
+					<div class="divider divider-center"><i class="icon-circle"></i></div>
+
+					<!-- Portfolio Single Gallery - ME433
+					============================================= -->
+					<h2 class="t300">ME433 - Advanced Mechatronics</h2>
+					<div class="col_full portfolio-single-image topmargin">
+						<div class="fslider" data-arrows="true" data-animation="slide">
+							<div class="flexslider">
+								<div class="slider-wrap">
+									<div class="slide"><img src="images/projects/mechatronics.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/mechatronics.jpg" alt=""></div>
+									<div class="slide"><iframe width="560" height="315" src="https://www.youtube.com/embed/odl52fTSrSQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>></div>
+								</div>
+							</div>
+						</div>
+					</div><!-- .portfolio-single-image end -->
+
+					<div class="col_one_third nobottommargin">
+
+						<!-- Portfolio Single - Meta
+						============================================= -->
+						<div class="card events-meta">
+							<div class="card-body">
+								<ul class="portfolio-meta nobottommargin">
+									<li><span><i class="icon-calendar"></i>Started on:</span> April 2019</li>
+									<li><span><i class="icon-calendar-check"></i>Completed on:</span> June 2019</li>
+									<li><span><i class="icon-lightbulb"></i>Skills:</span> C | Python | EAGLE</li>
+									<li><span><i class="icon-user"></i>Client:</span> None</li>
+									<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com" target="_blank"> Demo Videos</a></li>
+								</ul>
+							</div>
+						</div>
+						<!-- Portfolio Single - Meta End -->
+						
+					</div>
+
+					<!-- Portfolio Single Content
+					============================================= -->
+					<div class="col_two_third portfolio-single-content col_last nobottommargin">
+
+						<!-- Portfolio Single - Description
+						============================================= -->
+						<div class="fancy-title title-dotted-border">
+							<h2>Project Info:</h2>
+						</div>
+
+						<div class="col_half nobottommargin">
+							<p>That was the goal of MECH_ENG 433 – to create a toy car that could navigate a race track using cues from the environment. The course ended with a friendly competition between the students to see how well each of our creations fared on the track.
+							</p>
+						</div>
+
+						<div class="col_half col_last nobottommargin">
+							<p>More info after course actually ends after this quarter.
+							</p>
 						</div>
 						<!-- Portfolio Single - Description End -->
 
@@ -154,7 +217,7 @@
 
 					<!-- Related Portfolio Items
 					============================================= -->
-					<h4>Related Projects:</h4>
+					<h4>Related Works:</h4>
 
 					<div id="related-portfolio" class="owl-carousel portfolio-carousel carousel-widget" data-margin="30" data-nav="false" data-autoplay="5000" data-items-xs="1" data-items-sm="2" data-items-md="3" data-items-xl="4">
 
@@ -162,7 +225,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/portfolio/4/1.jpg" alt="Open Imagination">
+										<img src="images/hobbies/chess.png" alt="Open Imagination">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="images/portfolio/full/1.jpg" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
@@ -175,11 +238,12 @@
 								</div>
 							</div>
 						</div>
+
 						<div class="oc-item">
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/portfolio/4/2.jpg" alt="Locked Steel Gate">
+										<img src="images/hobbies/chess.png" alt="Locked Steel Gate">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="images/portfolio/full/2.jpg" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
@@ -192,11 +256,12 @@
 								</div>
 							</div>
 						</div>
+
 						<div class="oc-item">
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="#">
-										<img src="images/portfolio/4/3.jpg" alt="Mac Sunglasses">
+										<img src="images/hobbies/chess.png" alt="Mac Sunglasses">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="http://vimeo.com/89396394" class="left-icon" data-lightbox="iframe"><i class="icon-line-play"></i></a>
@@ -209,11 +274,12 @@
 								</div>
 							</div>
 						</div>
+
 						<div class="oc-item">
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="#">
-										<img src="images/portfolio/4/4.jpg" alt="Mac Sunglasses">
+										<img src="images/hobbies/chess.png" alt="Mac Sunglasses">
 									</a>
 									<div class="portfolio-overlay" data-lightbox="gallery">
 										<a href="images/portfolio/full/4.jpg" class="left-icon" data-lightbox="gallery-item"><i class="icon-line-stack-2"></i></a>
@@ -224,113 +290,6 @@
 								<div class="portfolio-desc">
 									<h3><a href="portfolio-single-gallery.html">Morning Dew</a></h3>
 									<span><a href="#">Icons</a>, <a href="#">Illustrations</a></span>
-								</div>
-							</div>
-						</div>
-						<div class="oc-item">
-							<div class="iportfolio">
-								<div class="portfolio-image">
-									<a href="portfolio-single.html">
-										<img src="images/portfolio/4/5.jpg" alt="Console Activity">
-									</a>
-									<div class="portfolio-overlay">
-										<a href="images/portfolio/full/5.jpg" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
-										<a href="portfolio-single.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
-									</div>
-								</div>
-								<div class="portfolio-desc">
-									<h3><a href="portfolio-single.html">Console Activity</a></h3>
-									<span><a href="#">UI Elements</a>, <a href="#">Media</a></span>
-								</div>
-							</div>
-						</div>
-						<div class="oc-item">
-							<div class="iportfolio">
-								<div class="portfolio-image">
-									<a href="portfolio-single-gallery.html">
-										<img src="images/portfolio/4/6.jpg" alt="Shake It!">
-									</a>
-									<div class="portfolio-overlay" data-lightbox="gallery">
-										<a href="images/portfolio/full/6.jpg" class="left-icon" data-lightbox="gallery-item"><i class="icon-line-stack-2"></i></a>
-										<a href="images/portfolio/full/6-1.jpg" class="hidden" data-lightbox="gallery-item"></a>
-										<a href="images/portfolio/full/6-2.jpg" class="hidden" data-lightbox="gallery-item"></a>
-										<a href="images/portfolio/full/6-3.jpg" class="hidden" data-lightbox="gallery-item"></a>
-										<a href="portfolio-single-gallery.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
-									</div>
-								</div>
-								<div class="portfolio-desc">
-									<h3><a href="portfolio-single-gallery.html">Shake It!</a></h3>
-									<span><a href="#">Illustrations</a>, <a href="#">Graphics</a></span>
-								</div>
-							</div>
-						</div>
-						<div class="oc-item">
-							<div class="iportfolio">
-								<div class="portfolio-image">
-									<a href="portfolio-single-video.html">
-										<img src="images/portfolio/4/7.jpg" alt="Backpack Contents">
-									</a>
-									<div class="portfolio-overlay">
-										<a href="http://www.youtube.com/watch?v=kuceVNBTJio" class="left-icon" data-lightbox="iframe"><i class="icon-line-play"></i></a>
-										<a href="portfolio-single-video.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
-									</div>
-								</div>
-								<div class="portfolio-desc">
-									<h3><a href="portfolio-single-video.html">Backpack Contents</a></h3>
-									<span><a href="#">UI Elements</a>, <a href="#">Icons</a></span>
-								</div>
-							</div>
-						</div>
-						<div class="oc-item">
-							<div class="iportfolio">
-								<div class="portfolio-image">
-									<a href="portfolio-single.html">
-										<img src="images/portfolio/4/8.jpg" alt="Sunset Bulb Glow">
-									</a>
-									<div class="portfolio-overlay">
-										<a href="images/portfolio/full/8.jpg" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
-										<a href="portfolio-single.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
-									</div>
-								</div>
-								<div class="portfolio-desc">
-									<h3><a href="portfolio-single.html">Sunset Bulb Glow</a></h3>
-									<span><a href="#">Graphics</a></span>
-								</div>
-							</div>
-						</div>
-						<div class="oc-item">
-							<div class="iportfolio">
-								<div class="portfolio-image">
-									<a href="portfolio-single.html">
-										<img src="images/portfolio/4/9.jpg" alt="Bridge Side">
-									</a>
-									<div class="portfolio-overlay" data-lightbox="gallery">
-										<a href="images/portfolio/full/9.jpg" class="left-icon" data-lightbox="gallery-item"><i class="icon-line-stack-2"></i></a>
-										<a href="images/portfolio/full/9-1.jpg" class="hidden" data-lightbox="gallery-item"></a>
-										<a href="images/portfolio/full/9-2.jpg" class="hidden" data-lightbox="gallery-item"></a>
-										<a href="portfolio-single-gallery.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
-									</div>
-								</div>
-								<div class="portfolio-desc">
-									<h3><a href="portfolio-single.html">Bridge Side</a></h3>
-									<span><a href="#">Illustrations</a>, <a href="#">Icons</a></span>
-								</div>
-							</div>
-						</div>
-						<div class="oc-item">
-							<div class="iportfolio">
-								<div class="portfolio-image">
-									<a href="portfolio-single-video.html">
-										<img src="images/portfolio/4/10.jpg" alt="Study Table">
-									</a>
-									<div class="portfolio-overlay">
-										<a href="http://vimeo.com/91973305" class="left-icon" data-lightbox="iframe"><i class="icon-line-play"></i></a>
-										<a href="portfolio-single-video.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
-									</div>
-								</div>
-								<div class="portfolio-desc">
-									<h3><a href="portfolio-single-video.html">Study Table</a></h3>
-									<span><a href="#">Graphics</a>, <a href="#">Media</a></span>
 								</div>
 							</div>
 						</div>
@@ -364,10 +323,6 @@
 	============================================= -->
 	<script src="js/jquery.js"></script>
 	<script src="js/plugins.js"></script>
-
-	<!-- Google Map JavaScripts
-	============================================= -->
-	<script src="js/jquery.gmap.js"></script>
 
 	<!-- Footer Scripts
 	============================================= -->
