--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 						</div>
 					</div>
 
-					<div class="section parallax 	 dark" style="padding: 20px 0;" data-bottom-top="background-position:0px 0px;" data-top-bottom="background-position:0px -300px;">
+					<div class="section parallax dark" style="padding: 20px 0;" data-bottom-top="background-position:0px 0px;" data-top-bottom="background-position:0px -300px;">
 
 						<div class="container clearfix">
 
@@ -320,11 +320,11 @@
 
 					<div class="row notopmargin divcenter" style="max-width: 1000px;">
 
-						<div class="col-md-6 bottommargin">
+						<div class="col-md-6 bottommargin-sm">
 							<img src="images/profile.jpg" alt="Profile">
 						</div>
 
-						<div class="col-md-6 bottommargin">
+						<div class="col-md-6 bottommargin-sm">
 							<p class="lead bottommargin" style="max-width: 800px;"><strong>Hi, I’m Xin Meng. I enjoy designing and making stuff.</strong> 
 								<br><br>I am currently enrolled in the Renaissance Engineering Program at Nanyang Technological University. I also am receiving a certificate in design from the Segal Design Institute at Northwestern University. As a mechanical engineer, I found my passion in mechatronics and I embrace the technical challenges involved. 
 								<br><br>In my free time, I play video games, Chinese flute, Chinese chess, badminton and table tennis.
