project thumbnail fix

--- a/mechatronics.html
+++ b/mechatronics.html
@@ -102,7 +102,6 @@
 								<div class="slider-wrap">
 									<div class="slide"><img src="images/projects/mechatronics.jpg" alt=""></div>
 									<div class="slide"><img src="images/projects/mechatronics.jpg" alt=""></div>
-									<div class="slide"><iframe width="560" height="315" src="https://www.youtube.com/embed/odl52fTSrSQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>></div>
 								</div>
 							</div>
 						</div>
@@ -115,11 +114,11 @@
 						<div class="card events-meta">
 							<div class="card-body">
 								<ul class="portfolio-meta nobottommargin">
-									<li><span><i class="icon-calendar"></i>Started on:</span> January 2019</li>
 									<li><span><i class="icon-calendar-check"></i>Completed on:</span> March 2019</li>
 									<li><span><i class="icon-lightbulb"></i>Skills:</span> C | MATLAB</li>
-									<li><span><i class="icon-user"></i>Client:</span> None</li>
-									<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com" target="_blank"> Demo Videos</a></li>
+									<li><span><i class="icon-user"></i>Client:</span> Coursework</li>
+									<li><span><i class="icon-users"></i>Team Members:</span> Individual</li>
+									<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com/" target="_blank"> Demo Video</a></li>
 								</ul>
 							</div>
 						</div>
@@ -163,7 +162,6 @@
 								<div class="slider-wrap">
 									<div class="slide"><img src="images/projects/mechatronics.jpg" alt=""></div>
 									<div class="slide"><img src="images/projects/mechatronics.jpg" alt=""></div>
-									<div class="slide"><iframe width="560" height="315" src="https://www.youtube.com/embed/odl52fTSrSQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>></div>
 								</div>
 							</div>
 						</div>
@@ -176,11 +174,11 @@
 						<div class="card events-meta">
 							<div class="card-body">
 								<ul class="portfolio-meta nobottommargin">
-									<li><span><i class="icon-calendar"></i>Started on:</span> April 2019</li>
 									<li><span><i class="icon-calendar-check"></i>Completed on:</span> June 2019</li>
 									<li><span><i class="icon-lightbulb"></i>Skills:</span> C | Python | EAGLE</li>
-									<li><span><i class="icon-user"></i>Client:</span> None</li>
-									<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com" target="_blank"> Demo Videos</a></li>
+									<li><span><i class="icon-users"></i>Client:</span> Coursework</li>
+									<li><span><i class="icon-calendar"></i>Team Members:</span> Individual</li>
+									<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com/embed/odl52fTSrSQ" target="_blank"> Demo Video</a></li>
 								</ul>
 							</div>
 						</div>
@@ -215,9 +213,9 @@
 
 					<div class="divider divider-center"><i class="icon-circle"></i></div>
 
-					<!-- Related Portfolio Items
+					<!-- Other Portfolio Items
 					============================================= -->
-					<h4>Related Works:</h4>
+					<h4>Other Works:</h4>
 
 					<div id="related-portfolio" class="owl-carousel portfolio-carousel carousel-widget" data-margin="30" data-nav="false" data-autoplay="5000" data-items-xs="1" data-items-sm="2" data-items-md="3" data-items-xl="4">
 
