--- a/index.html
+++ b/index.html
@@ -126,8 +126,10 @@
 									<div class="team-image">
 										<img src="images/projects/mechatronics.jpg" alt="Mechatronics">
 										<div class="team-overlay">
-											<h3><a href="mechatronics.html" class="social-icon" title="Mechatronics">A series of projects that were done as part of the Northwestern University Mechatronics courses.
-											</a></h3>
+											<a href="mechatronics.html" class="social-icon" title="Mechatronics">
+												<h3>A series of projects that were done as part of the Northwestern University Mechatronics courses.
+												</h3>
+											</a>
 										</div>
 									</div>
 									<div class="team-desc team-desc-bg">
@@ -141,8 +143,10 @@
 									<div class="team-image">
 										<img src="images/projects/nickel.jpg" alt="Nickel Feeder">
 										<div class="team-overlay">
-											<h3><a href="#" class="social-icon" title="Nickel Feeder">A project in collaboration with the Shedd Aquarium to design a feeder for Nickel, the resident green sea turtle.
-											</a></h3>
+											<a href="#" class="social-icon" title="Nickel Feeder">
+												<h3>A project in collaboration with the Shedd Aquarium to design a feeder for Nickel, the resident green sea turtle.
+												</h3>
+											</a>
 										</div>
 									</div>
 									<div class="team-desc team-desc-bg">
@@ -156,8 +160,10 @@
 									<div class="team-image">
 										<img src="images/projects/dtd.jpg" alt="Design Thinking and Doing">
 										<div class="team-overlay">
-											<h3><a href="#" class="social-icon" title="Design Thinking and Doing">I attempted to design and build a stool from scratch. This was also my first attempt at woodworking.
-											</a></h3>
+											<a href="#" class="social-icon" title="Design Thinking and Doing">
+												<h3>I attempted to design and build a stool from scratch. This was also my first attempt at woodworking.
+												</h3>
+											</a>
 										</div>
 									</div>
 									<div class="team-desc team-desc-bg">
@@ -171,8 +177,10 @@
 									<div class="team-image">
 										<img src="images/projects/dyson.jpg" alt="Dyson Internship">
 										<div class="team-overlay">
-											<h3><a href="#" class="social-icon" title="Dyson Internship">A 10-week internship program with Dyson UK that proved to be a great learning experience.
-											</a></h3>
+											<a href="#" class="social-icon" title="Dyson Internship">
+												<h3>A 10-week internship program with Dyson UK that proved to be a great learning experience.
+												</h3>
+											</a>
 										</div>
 									</div>
 									<div class="team-desc team-desc-bg">
@@ -186,8 +194,10 @@
 									<div class="team-image">
 										<img src="images/projects/design.jpg" alt="Industrial Design">
 										<div class="team-overlay">
-											<h3><a href="#" class="social-icon" title="Industrial Design">A product design class offered by the Segal Design Insititute that introduced me to the realm of product design.
-											</a></h3>
+											<a href="#" class="social-icon" title="Industrial Design">
+												<h3>A product design class offered by the Segal Design Insititute that introduced me to the realm of product design.
+												</h3>
+											</a>
 										</div>
 									</div>
 									<div class="team-desc team-desc-bg">
@@ -201,8 +211,10 @@
 									<div class="team-image">
 										<img src="images/projects/robobrawl.jpg" alt="Robobrawl">
 										<div class="team-overlay">
-											<h3><a href="#" class="social-icon" title="Robobrawl">My first robotics competition was an invaluable learning experience in designing and fabricating things within practical constraints.
-											</a></h3>
+											<a href="#" class="social-icon" title="Robobrawl">
+												<h3>My first robotics competition was an invaluable learning experience in designing and fabricating things within practical constraints.
+												</h3>
+											</a>
 										</div>
 									</div>
 									<div class="team-desc team-desc-bg">
@@ -216,8 +228,10 @@
 									<div class="team-image">
 										<img src="images/projects/PSA.jpg" alt="PSA GAME-IT CHALLENGE">
 										<div class="team-overlay">
-											<h3><a href="#" class="social-icon" title="PSA GAME-IT CHALLENGE">An exciting game-making competition that provided me with invaluable experience in programming. 
-											</a></h3>
+											<a href="#" class="social-icon" title="PSA GAME-IT CHALLENGE">
+												<h3>An exciting game-making competition that provided me with invaluable experience in programming. 
+												</h3>
+											</a>
 										</div>
 									</div>
 									<div class="team-desc team-desc-bg">
@@ -231,8 +245,10 @@
 									<div class="team-image">
 										<img src="images/projects/milkwatch.jpg" alt="Milkwatch">
 										<div class="team-overlay">
-											<h3><a href="#" class="social-icon" title="Milkwatch">A product that keeps you informed about the freshness of milk and predicts when your milk is about to spoil.
-											</a></h3>
+											<a href="#" class="social-icon" title="Milkwatch">
+												<h3>A product that keeps you informed about the freshness of milk and predicts when your milk is about to spoil.
+												</h3>
+											</a>
 										</div>
 									</div>
 									<div class="team-desc team-desc-bg">
