--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						<ul class="one-page-menu" data-easing="easeInOutExpo" data-speed="1250" data-offset="65">
 							<li><a href="#" data-href="#wrapper"><div>Home</div></a></li>
 							<li><a href="#" data-href="#section-works"><div>Works</div></a></li>
-							<li><a href="#" data-href="#section-hobbies"><div>Hobbies</div></a></li>
+							<li><a href="#" data-href="#section-hobbies"><div>Interests</div></a></li>
 							<li><a href="#" data-href="#section-about"><div>About</div></a></li>
 							<li><a href="#" data-href="#footer"><div>Contact</div></a></li>
 						</ul>
