--- a/mechatronics.html
+++ b/mechatronics.html
@@ -95,13 +95,13 @@
 
 					<!-- Portfolio Single Gallery - ME333
 					============================================= -->
-					<h2 class="t300">ME333 - Introduction to Mechatronics</h2>
+					<h2 class="t300 bottommargin-sm">ME333 - Introduction to Mechatronics</h2>
 					<div class="col_full portfolio-single-image">
 						<div class="fslider" data-arrows="true" data-animation="slide">
 							<div class="flexslider">
 								<div class="slider-wrap">
-									<div class="slide"><img src="images/projects/mechatronics.jpg" alt=""></div>
-									<div class="slide"><img src="images/projects/mechatronics.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/schematics.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/results.jpg" alt=""></div>
 								</div>
 							</div>
 						</div>
@@ -118,7 +118,7 @@
 									<li><span><i class="icon-lightbulb"></i>Skills:</span> C | MATLAB</li>
 									<li><span><i class="icon-user"></i>Client:</span> Coursework</li>
 									<li><span><i class="icon-users"></i>Team Members:</span> Individual</li>
-									<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com/" target="_blank"> Demo Video</a></li>
+									<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com/embed/odl52fTSrSQ" target="_blank"> Demo Video</a></li>
 								</ul>
 							</div>
 						</div>
@@ -132,17 +132,20 @@
 
 						<!-- Portfolio Single - Description
 						============================================= -->
-						<div class="fancy-title title-dotted-border">
-							<h2>Project Info:</h2>
-						</div>
-
 						<div class="col_half nobottommargin">
 							<p>The final project of MECH_ENG 333 was to create a robot arm that could follow a user-defined trajectory in MATLAB. The software for the microcontroller was built using C, and the user interface using MATLAB.
+							<br><br>This project was the culmination of all the lessons learnt over the quarter: 
 							</p>
 						</div>
 
 						<div class="col_half col_last nobottommargin">
-							<p>This project was the culmination of all the lessons learnt over the quarter – coding, peripherals, interrupts, UART, PID control and motors. It was challenging but, as a result, I learnt to troubleshoot effectively. Eventually, my robot arm worked as intended.
+							<p>&#183 Coding - 
+								<br>&#183 Peripherals - 
+								<br>&#183 Interrupts - 
+								<br>&#183 UART - Serial Communication between microcrontroller and computer
+								<br>&#183 PID control - 
+								<br>&#183 Motors - 
+								<br><br>Due to the numerous challenges, I learnt to troubleshoot effectively.
 							</p>
 						</div>
 						<!-- Portfolio Single - Description End -->
@@ -155,8 +158,8 @@
 
 					<!-- Portfolio Single Gallery - ME433
 					============================================= -->
-					<h2 class="t300">ME433 - Advanced Mechatronics</h2>
-					<div class="col_full portfolio-single-image topmargin">
+					<h2 class="t300 bottommargin-sm">ME433 - Advanced Mechatronics</h2>
+					<div class="col_full portfolio-single-image">
 						<div class="fslider" data-arrows="true" data-animation="slide">
 							<div class="flexslider">
 								<div class="slider-wrap">
