--- a/mechatronics.html
+++ b/mechatronics.html
@@ -107,19 +107,24 @@
 						</div>
 					</div><!-- .portfolio-single-image end -->
 
-					<div class="col_one_third nobottommargin">
+					<div class="col_full portfolio-single-image">
 
 						<!-- Portfolio Single - Meta
 						============================================= -->
 						<div class="card events-meta">
 							<div class="card-body">
-								<ul class="portfolio-meta nobottommargin">
-									<li><span><i class="icon-calendar-check"></i>Completed on:</span> March 2019</li>
-									<li><span><i class="icon-lightbulb"></i>Skills:</span> C | MATLAB</li>
-									<li><span><i class="icon-user"></i>Client:</span> Coursework</li>
-									<li><span><i class="icon-users"></i>Team Members:</span> Individual</li>
-									<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com/embed/odl52fTSrSQ" target="_blank"> Demo Video</a></li>
-								</ul>
+								<div class="col_half nobottommargin">
+									<ul class="portfolio-meta nobottommargin">
+										<li><span><i class="icon-calendar-check"></i>Completed on:</span> March 2019</li>
+										<li><span><i class="icon-lightbulb"></i>Skills:</span> C | MATLAB</li>
+									</ul>
+								</div>
+								<div class="col_half col_last nobottommargin">
+									<ul class="portfolio-meta nobottommargin">
+										<li><span><i class="icon-users"></i>Team Members:</span> Individual</li>
+										<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com/embed/odl52fTSrSQ" target="_blank"> Demo Video</a></li>
+									</ul>
+								</div>
 							</div>
 						</div>
 						<!-- Portfolio Single - Meta End -->
@@ -128,24 +133,24 @@
 
 					<!-- Portfolio Single Content
 					============================================= -->
-					<div class="col_two_third portfolio-single-content col_last nobottommargin">
+					<div class="portfolio-single nobottommargin">
 
 						<!-- Portfolio Single - Description
 						============================================= -->
 						<div class="col_half nobottommargin">
 							<p>The final project of MECH_ENG 333 was to create a robot arm that could follow a user-defined trajectory in MATLAB. The software for the microcontroller was built using C, and the user interface using MATLAB.
 							<br><br>This project was the culmination of all the lessons learnt over the quarter: 
+							<br><strong>&#183 Coding</strong> - Using C to program the microcontroller and MATLAB to program the client interface
+							<br><strong>&#183 Peripherals</strong> - Programming the pins on the microcontroller to be digital or analog I/O pins
+							<br><strong>&#183 Interrupts</strong> - Writing Interrupt Service Routines so that the CPU can be freed up for other operations
 							</p>
 						</div>
 
 						<div class="col_half col_last nobottommargin">
-							<p>&#183 Coding - 
-								<br>&#183 Peripherals - 
-								<br>&#183 Interrupts - 
-								<br>&#183 UART - Serial Communication between microcrontroller and computer
-								<br>&#183 PID control - 
-								<br>&#183 Motors - 
-								<br><br>Due to the numerous challenges, I learnt to troubleshoot effectively.
+							<p><strong>&#183 UART</strong> - Serial Communication between microcrontroller and computer
+								<br><strong>&#183 PID control</strong> - Implement PID control using PWM output based on the position input from encoder
+								<br><strong>&#183 Motors</strong> - Using the motor specs to determine the optimal working voltage and current
+								<br><br>Due to the numerous challenges faced while working on the assignment, I learnt to troubleshoot effectively.
 							</p>
 						</div>
 						<!-- Portfolio Single - Description End -->
@@ -170,19 +175,24 @@
 						</div>
 					</div><!-- .portfolio-single-image end -->
 
-					<div class="col_one_third nobottommargin">
+					<div class="col_full portfolio-single-image">
 
 						<!-- Portfolio Single - Meta
 						============================================= -->
 						<div class="card events-meta">
 							<div class="card-body">
-								<ul class="portfolio-meta nobottommargin">
-									<li><span><i class="icon-calendar-check"></i>Completed on:</span> June 2019</li>
+								<div class="col_half nobottommargin">
+									<ul class="portfolio-meta nobottommargin">
+										<li><span><i class="icon-calendar-check"></i>Completed on:</span> June 2019</li>
 									<li><span><i class="icon-lightbulb"></i>Skills:</span> C | Python | EAGLE</li>
-									<li><span><i class="icon-users"></i>Client:</span> Coursework</li>
-									<li><span><i class="icon-calendar"></i>Team Members:</span> Individual</li>
-									<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com/embed/odl52fTSrSQ" target="_blank"> Demo Video</a></li>
-								</ul>
+									</ul>
+								</div>
+								<div class="col_half col_last nobottommargin">
+									<ul class="portfolio-meta nobottommargin">
+										<li><span><i class="icon-calendar"></i>Team Members:</span> Individual</li>
+										<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com/watch?v=-sUzuhtbILY&list=PLr4FWeKNYt_eygGGwJLSBUCV-q6pgxNd4" target="_blank"> Demo Video</a></li>
+									</ul>
+								</div>
 							</div>
 						</div>
 						<!-- Portfolio Single - Meta End -->
@@ -191,14 +201,10 @@
 
 					<!-- Portfolio Single Content
 					============================================= -->
-					<div class="col_two_third portfolio-single-content col_last nobottommargin">
+					<div class="portfolio-single nobottommargin">
 
 						<!-- Portfolio Single - Description
 						============================================= -->
-						<div class="fancy-title title-dotted-border">
-							<h2>Project Info:</h2>
-						</div>
-
 						<div class="col_half nobottommargin">
 							<p>That was the goal of MECH_ENG 433 – to create a toy car that could navigate a race track using cues from the environment. The course ended with a friendly competition between the students to see how well each of our creations fared on the track.
 							</p>
@@ -220,22 +226,22 @@
 					============================================= -->
 					<h4>Other Works:</h4>
 
-					<div id="related-portfolio" class="owl-carousel portfolio-carousel carousel-widget" data-margin="30" data-nav="false" data-autoplay="5000" data-items-xs="1" data-items-sm="2" data-items-md="3" data-items-xl="4">
+					<div id="related-portfolio" class="owl-carousel portfolio-carousel carousel-widget" data-margin="30" data-nav="false" data-autoplay="5000" data-items-xs="1" data-items-sm="1" data-items-md="2" data-items-xl="3">
 
 						<div class="oc-item">
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/hobbies/chess.png" alt="Open Imagination">
+										<img src="images/projects/nickel.jpg" alt="Open Imagination">
 									</a>
 									<div class="portfolio-overlay">
-										<a href="images/portfolio/full/1.jpg" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
-										<a href="portfolio-single.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
+										<a href="#" class="social-icon" title="Nickel Feeder">
+											<h4>A project in collaboration with the Shedd Aquarium to design a feeder for Nickel, the resident green sea turtle.</h4>
+										</a>
 									</div>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="portfolio-single.html">Open Imagination</a></h3>
-									<span><a href="#">Media</a>, <a href="#">Icons</a></span>
+									<h3>Nickel Feeder</h3>
 								</div>
 							</div>
 						</div>
@@ -244,16 +250,16 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/hobbies/chess.png" alt="Locked Steel Gate">
+										<img src="images/projects/nickel.jpg" alt="Open Imagination">
 									</a>
 									<div class="portfolio-overlay">
-										<a href="images/portfolio/full/2.jpg" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
-										<a href="portfolio-single.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
+										<a href="#" class="social-icon" title="Nickel Feeder">
+											<h4>A project in collaboration with the Shedd Aquarium to design a feeder for Nickel, the resident green sea turtle.</h4>
+										</a>
 									</div>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="portfolio-single.html">Locked Steel Gate</a></h3>
-									<span><a href="#">Illustrations</a></span>
+									<h3><a href="portfolio-single.html">Nickel Feeder</a></h3>
 								</div>
 							</div>
 						</div>
@@ -261,17 +267,17 @@
 						<div class="oc-item">
 							<div class="iportfolio">
 								<div class="portfolio-image">
-									<a href="#">
-										<img src="images/hobbies/chess.png" alt="Mac Sunglasses">
+									<a href="portfolio-single.html">
+										<img src="images/projects/nickel.jpg" alt="Open Imagination">
 									</a>
 									<div class="portfolio-overlay">
-										<a href="http://vimeo.com/89396394" class="left-icon" data-lightbox="iframe"><i class="icon-line-play"></i></a>
-										<a href="portfolio-single-video.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
+										<a href="#" class="social-icon" title="Nickel Feeder">
+											<h4>A project in collaboration with the Shedd Aquarium to design a feeder for Nickel, the resident green sea turtle.</h4>
+										</a>
 									</div>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="portfolio-single-video.html">Mac Sunglasses</a></h3>
-									<span><a href="#">Graphics</a>, <a href="#">UI Elements</a></span>
+									<h3><a href="portfolio-single.html">Nickel Feeder</a></h3>
 								</div>
 							</div>
 						</div>
@@ -279,18 +285,17 @@
 						<div class="oc-item">
 							<div class="iportfolio">
 								<div class="portfolio-image">
-									<a href="#">
-										<img src="images/hobbies/chess.png" alt="Mac Sunglasses">
+									<a href="portfolio-single.html">
+										<img src="images/projects/nickel.jpg" alt="Open Imagination">
 									</a>
-									<div class="portfolio-overlay" data-lightbox="gallery">
-										<a href="images/portfolio/full/4.jpg" class="left-icon" data-lightbox="gallery-item"><i class="icon-line-stack-2"></i></a>
-										<a href="images/portfolio/full/4-1.jpg" class="hidden" data-lightbox="gallery-item"></a>
-										<a href="portfolio-single-gallery.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
+									<div class="portfolio-overlay">
+										<a href="#" class="social-icon" title="Nickel Feeder">
+											<h4>A project in collaboration with the Shedd Aquarium to design a feeder for Nickel, the resident green sea turtle.</h4>
+										</a>
 									</div>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="portfolio-single-gallery.html">Morning Dew</a></h3>
-									<span><a href="#">Icons</a>, <a href="#">Illustrations</a></span>
+									<h3><a href="portfolio-single.html">Nickel Feeder</a></h3>
 								</div>
 							</div>
 						</div>
