--- a/mechatronics.html
+++ b/mechatronics.html
@@ -259,7 +259,7 @@
 									</div>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="portfolio-single.html">Nickel Feeder</a></h3>
+									<h3>Nickel Feeder</h3>
 								</div>
 							</div>
 						</div>
@@ -277,7 +277,7 @@
 									</div>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="portfolio-single.html">Nickel Feeder</a></h3>
+									<h3>Nickel Feeder</h3>
 								</div>
 							</div>
 						</div>
@@ -295,7 +295,7 @@
 									</div>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="portfolio-single.html">Nickel Feeder</a></h3>
+									<h3>Nickel Feeder</h3>
 								</div>
 							</div>
 						</div>
