--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 									<div class="team-image">
 										<img src="images/projects/nickel.jpg" alt="Nickel Feeder">
 										<div class="team-overlay">
-											<a href="#" class="social-icon" title="Nickel Feeder">
+											<a href="nickel.html" class="social-icon" title="Nickel Feeder">
 												<h3>A project in collaboration with the Shedd Aquarium to design a feeder for Nickel, the resident green sea turtle.
 												</h3>
 											</a>
@@ -226,9 +226,9 @@
 							<div class="col-md-6 bottommargin">
 								<div class="team">
 									<div class="team-image">
-										<img src="images/projects/PSA.jpg" alt="PSA GAME-IT CHALLENGE">
+										<img src="images/projects/PSA.jpg" alt="PSA GAME-IT Challenge">
 										<div class="team-overlay">
-											<a href="#" class="social-icon" title="PSA GAME-IT CHALLENGE">
+											<a href="#" class="social-icon" title="PSA GAME-IT Challenge">
 												<h3>An exciting game-making competition that provided me with invaluable experience in programming. 
 												</h3>
 											</a>
@@ -261,7 +261,7 @@
 
 				</div>
 
-				<div id="section-hobbies" class="notoppadding">
+				<div id="section-hobbies" class="page-section notoppadding">
 
 					<div class="section nomargin">
 						<div class="container clearfix">
