--- a/nickel.html
+++ b/nickel.html
@@ -28,7 +28,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Yao Xin Meng | Mechatronics</title>
+	<title>Yao Xin Meng | Nickel Feeder</title>
 	<link rel="icon" href="https://yaoxinmeng.github.io/favicon.ico">
 
 </head>
@@ -81,7 +81,7 @@
 		<section id="page-title">
 
 			<div class="container clearfix">
-				<h1>Mechatronics</h1>
+				<h1>Nickel Feeder</h1>
 			</div>
 
 		</section><!-- #page-title end -->
@@ -232,16 +232,16 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/nickel.jpg" alt="Open Imagination">
+										<img src="images/projects/mechatronics.jpg" alt="Mechatronics">
 									</a>
 									<div class="portfolio-overlay">
-										<a href="nickel.html" class="social-icon" title="Nickel Feeder">
-											<h4>A project in collaboration with the Shedd Aquarium to design a feeder for Nickel, the resident green sea turtle.</h4>
+										<a href="mechatronics.html" class="social-icon" title="Mechatronics">
+											<h4>A series of projects that were done as part of the Northwestern University Mechatronics courses.</h4>
 										</a>
 									</div>
 								</div>
 								<div class="portfolio-desc">
-									<h3>Nickel Feeder</h3>
+									<h3>Mechatronics</h3>
 								</div>
 							</div>
 						</div>
