--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<!-- Stylesheets
 	============================================= -->
-	<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700|Roboto:300,400,500,700" rel="stylesheet" type="text/css" />
+	<link href="fonts.googleapis.com/css?family=Helvetica:300,400,600,700|Roboto:300,400,500,700" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
 	<link rel="stylesheet" href="css/style.css" type="text/css" />
 
@@ -160,7 +160,7 @@
 									<div class="team-image">
 										<img src="images/projects/dtd.jpg" alt="Design Thinking and Doing">
 										<div class="team-overlay">
-											<a href="#" class="social-icon" title="Design Thinking and Doing">
+											<a href="dtd.html" class="social-icon" title="Design Thinking and Doing">
 												<h3>I attempted to design and build a stool from scratch. This was also my first attempt at woodworking.
 												</h3>
 											</a>
