--- a/mechatronics.html
+++ b/mechatronics.html
@@ -100,8 +100,8 @@
 						<div class="fslider" data-arrows="true" data-animation="slide">
 							<div class="flexslider">
 								<div class="slider-wrap">
-									<div class="slide"><img src="images/projects/schematics.jpg" alt=""></div>
-									<div class="slide"><img src="images/projects/results.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/mechatronics/schematics.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/mechatronics/results.jpg" alt=""></div>
 								</div>
 							</div>
 						</div>
@@ -122,7 +122,7 @@
 								<div class="col_half col_last nobottommargin">
 									<ul class="portfolio-meta nobottommargin">
 										<li><span><i class="icon-users"></i>Team Members:</span> Individual</li>
-										<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com/embed/odl52fTSrSQ" target="_blank"> Demo Video</a></li>
+										<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com/embed/odl52fTSrSQ" target="_blank"> Video Demonstration</a></li>
 									</ul>
 								</div>
 							</div>
@@ -138,19 +138,21 @@
 						<!-- Portfolio Single - Description
 						============================================= -->
 						<div class="col_half nobottommargin">
-							<p>The final project of MECH_ENG 333 was to create a robot arm that could follow a user-defined trajectory in MATLAB. The software for the microcontroller was built using C, and the user interface using MATLAB.
-							<br><br>This project was the culmination of all the lessons learnt over the quarter: 
-							<br><strong>&#183 Coding</strong> - Using C to program the microcontroller and MATLAB to program the client interface
-							<br><strong>&#183 Peripherals</strong> - Programming the pins on the microcontroller to be digital or analog I/O pins
-							<br><strong>&#183 Interrupts</strong> - Writing Interrupt Service Routines so that the CPU can be freed up for other operations
+							<p>
+								The final project of MECH_ENG 333 was to create a robot arm that could follow a user-defined trajectory in MATLAB. The software for the microcontroller was built using C, and the user interface using MATLAB.
+								<br><br>This project was the culmination of all the lessons learnt over the quarter: 
+								<br><strong>&#183 Coding</strong> - Using C to program the microcontroller and MATLAB to program the client interface
+								<br><strong>&#183 Peripherals</strong> - Programming the pins on the microcontroller to be digital or analog I/O pins
+								<br><strong>&#183 Interrupts</strong> - Writing Interrupt Service Routines so that the CPU can be freed up for other operations
 							</p>
 						</div>
 
 						<div class="col_half col_last nobottommargin">
-							<p><strong>&#183 UART</strong> - Serial Communication between microcrontroller and computer
+							<p>
+								<strong>&#183 UART</strong> - Serial Communication between microcrontroller and computer
 								<br><strong>&#183 PID control</strong> - Implement PID control using PWM output based on the position input from encoder
 								<br><strong>&#183 Motors</strong> - Using the motor specs to determine the optimal working voltage and current
-								<br><br>Due to the numerous challenges faced while working on the assignment, I learnt to troubleshoot effectively.
+								<br><br>Due to the numerous challenges faced while working on the assignment, I learnt to troubleshoot effectively. As the problem could be either due to hardware, software, or a mix of both, the main challenge lies in isolating the source of the problem. As a result, I learnt to create checkpoints in my code (such as the flashing of LED) and split the hardware into smaller modules.
 							</p>
 						</div>
 						<!-- Portfolio Single - Description End -->
@@ -184,13 +186,13 @@
 								<div class="col_half nobottommargin">
 									<ul class="portfolio-meta nobottommargin">
 										<li><span><i class="icon-calendar-check"></i>Completed on:</span> June 2019</li>
-									<li><span><i class="icon-lightbulb"></i>Skills:</span> C | Python | EAGLE</li>
+									<li><span><i class="icon-lightbulb"></i>Skills:</span> C | Harmony | EAGLE | Python</li>
 									</ul>
 								</div>
 								<div class="col_half col_last nobottommargin">
 									<ul class="portfolio-meta nobottommargin">
 										<li><span><i class="icon-calendar"></i>Team Members:</span> Individual</li>
-										<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com/watch?v=-sUzuhtbILY&list=PLr4FWeKNYt_eygGGwJLSBUCV-q6pgxNd4" target="_blank"> Demo Video</a></li>
+										<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com/playlist?list=PLr4FWeKNYt_eygGGwJLSBUCV-q6pgxNd4" target="_blank"> Video Demonstrations</a></li>
 									</ul>
 								</div>
 							</div>
@@ -206,12 +208,19 @@
 						<!-- Portfolio Single - Description
 						============================================= -->
 						<div class="col_half nobottommargin">
-							<p>MECH_ENG 433 was an extension of MECH_ENG 333. Through a series of assignements, we gained the skills required for the final assignment of MECH_ENG 433 – create a toy car that could navigate a race track using cues from the environment. The course ended with a friendly competition between the students to see how well each of our creations fared on the track.
+							<p>
+								MECH_ENG 433 was an extension of MECH_ENG 333. Through a series of assignements, we gained the skills required for the final assignment of MECH_ENG 433 – create a toy car that could navigate a race track using cues from the environment. The course ended with a friendly competition between the students to see how well each of our creations fared on the track.
+								<br><br>For the final assignment, I had to apply all the skills learnt over the quarter: 
+								<br><strong>&#183 Coding</strong> - Using C to program the microcontroller and Python to program the client interface
+								<br><strong>&#183 Peripherals</strong> - 
+								<br><strong>&#183 Serial Communication</strong> - 
 							</p>
 						</div>
 
 						<div class="col_half col_last nobottommargin">
-							<p>More info after course actually ends after this quarter.
+							<p>
+								<strong>&#183 Digital Signal Processing</strong> - Serial Communication between microcrontroller and computer
+								<br><br>More info after course actually ends after this quarter.
 							</p>
 						</div>
 						<!-- Portfolio Single - Description End -->
@@ -253,7 +262,7 @@
 										<img src="images/projects/dtd.jpg" alt="Design Thinking and Doing">
 									</a>
 									<div class="portfolio-overlay">
-										<a href="#" class="social-icon" title="Design Thinking and Doing">
+										<a href="dtd.html" class="social-icon" title="Design Thinking and Doing">
 											<h4>I attempted to design and build a stool from scratch. This was also my first attempt at woodworking.</h4>
 										</a>
 									</div>
@@ -340,7 +349,7 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/design.jpg" alt="Milkwatch">
+										<img src="images/projects/milkwatch.jpg" alt="Milkwatch">
 									</a>
 									<div class="portfolio-overlay">
 										<a href="#" class="social-icon" title="Milkwatch">
