--- a/dtd.html
+++ b/dtd.html
@@ -28,7 +28,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Yao Xin Meng | Nickel Feeder</title>
+	<title>Yao Xin Meng | DTD</title>
 	<link rel="icon" href="https://yaoxinmeng.github.io/favicon.ico">
 
 </head>
@@ -81,7 +81,7 @@
 		<section id="page-title">
 
 			<div class="container clearfix">
-				<h1>Nickel Feeder</h1>
+				<h1>Design Thinking and Doing</h1>
 			</div>
 
 		</section><!-- #page-title end -->
@@ -93,15 +93,15 @@
 
 				<div class="container clearfix">
 
-					<!-- Portfolio Single Gallery - Nickel
+					<!-- Portfolio Single Gallery - DTD
 					============================================= -->
-					<h2 class="t300 bottommargin-sm">A capstone project to improve the health of a sea turtle</h2>
+					<h2 class="t300 bottommargin-sm">A self-directed project to learn more about woodworking design</h2>
 					<div class="col_full portfolio-single-image">
 						<div class="fslider" data-arrows="true" data-animation="slide">
 							<div class="flexslider">
 								<div class="slider-wrap">
-									<div class="slide"><img src="images/projects/nickel/prototyping.jpg" alt=""></div>
-									<div class="slide"><img src="images/projects/nickel/idp_sketch.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/dtd/cad.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/dtd/step1.jpg" alt=""></div>
 									<div class="slide"><img src="images/projects/nickel/drawer.jpg" alt=""></div>
 								</div>
 							</div>
@@ -116,13 +116,13 @@
 							<div class="card-body">
 								<div class="col_half nobottommargin">
 									<ul class="portfolio-meta nobottommargin">
-										<li><span><i class="icon-calendar-check"></i>Completed on:</span> June 2019</li>
-										<li><span><i class="icon-lightbulb"></i>Skills:</span> Solidworks | Pneumatics | Arduino</li>
+										<li><span><i class="icon-calendar-check"></i>Completed on:</span> November 2018</li>
+										<li><span><i class="icon-lightbulb"></i>Skills:</span> Solidworks | Woodworking</li>
 									</ul>
 								</div>
 								<div class="col_half col_last nobottommargin">
 									<ul class="portfolio-meta nobottommargin">
-										<li><span><i class="icon-users"></i>Team Members:</span> Ella | Peter | Mark | Yufei</li>
+										<li><span><i class="icon-users"></i>Team Members:</span> Individual</li>
 										<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com/playlist?list=PLr4FWeKNYt_edi7bB8CqKRETKgxmRvrfA" target="_blank"> Demo Video</a></li>
 									</ul>
 								</div>
@@ -139,15 +139,12 @@
 						<!-- Portfolio Single - Description
 						============================================= -->
 						<div class="col_half nobottommargin">
-							<p>In collaboration with Shedd Aquarium, we wanted to encourage Nickel, the resident sea turtle, to have a healthy lifestyle. Due to her regular feeding schedule, Nickel was inactive for the majority of the day and was active only during feeding times.
-							<br><br>To tackle this problem, our initial design was an array of feeders that would activate when Nickel pressed a button. We hoped that this interaction would give Nickel a sense of control over her feeding times and therefore motivate her to be active outside of regular feeding times.
-							<br><br>To ensure that our feeder remained robust underwater, we powered it pneumatically. The pneumatics were controlled by a microcontroller at the surface, which gave us more control over the entire system. During the prototyping phase, we encountered unforeseen technical challenges with the pneumatics system that significantly delayed our plans. 
+							<p>This was my very first design course and I was given the freedom to pursue absolutely anything design-related. Obviously, I chose to build a stool.
 							</p>
 						</div>
 
 						<div class="col_half col_last nobottommargin">
-							<p>As a result, we decided to simplify the design by removing the pneumatic push-button valve. In its place, we implemented a random release using the microcontroller-controlled electric valves. While Nickel no longer has control over her feeding times, this new design still introduces irregularity into her daily schedule. 
-							<br><br>From our testing at Shedd Aquarium, Nickel... 
+							<p>As a result, we decided to simplify the 
 							</p>
 						</div>
 						<!-- Portfolio Single - Description End -->
@@ -186,16 +183,16 @@
 							<div class="iportfolio">
 								<div class="portfolio-image">
 									<a href="portfolio-single.html">
-										<img src="images/projects/dtd.jpg" alt="Design Thinking and Doing">
+										<img src="images/projects/nickel.jpg" alt="Open Imagination">
 									</a>
 									<div class="portfolio-overlay">
-										<a href="dtd.html" class="social-icon" title="Design Thinking and Doing">
-											<h4>I attempted to design and build a stool from scratch. This was also my first attempt at woodworking.</h4>
+										<a href="nickel.html" class="social-icon" title="Nickel Feeder">
+											<h4>A project in collaboration with the Shedd Aquarium to design a feeder for Nickel, the resident green sea turtle.</h4>
 										</a>
 									</div>
 								</div>
 								<div class="portfolio-desc">
-									<h3>Design Thinking and Doing</h3>
+									<h3>Nickel Feeder</h3>
 								</div>
 							</div>
 						</div>
